# simple-budget

./: .gitignore  README.md  pyproject.toml  requirements.txt
simple-budget/: __init__.py
simple-budget/controllers/: controller.py
simple-budget/models/: Base.py  Template.py
simple-budget/views/static/: manifest.json  style.css  sw.js
simple-budget/views/templates/: index.html
simplebudget/: __init__.py
simplebudget/controllers/: controller.py
simplebudget/models/: Base.py  Template.py
simplebudget/models/db/: database.db
simplebudget/views/static/: sw.js
simplebudget/views/templates/: index.html
