[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="flask-mvc-pwa"
version="0.0.1"
authors=[
    { name="seanpden", email="seanden522@gmail.com" },
]
description="Template for PWAs using Flask"
readme="README.md"
requires-python=">=3.11"
dependencies=[
    "Flask==2.3.2",
    "SQLAlchemy==2.0.19"
]

